--- a/app/bower.json
+++ b/app/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Estoque-Services Layout",
+  "name": "estoqueservices",
   "authors": [
     "José Anchieta dos Santos Júnior <santosjr87@gmail.com>"
   ],
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "jquery": "~2.2.0",
-    "bootstrap": "v4.0.0-alpha.2"
+    "bootstrap": "v4.0.0-alpha.2",
+    "angular": "^1.5.3"
   }
 }
